syntax = "proto3";

package org.hypertrace.label.application.rule.config.service.v1;

option java_multiple_files = true;

message LabelApplicationRule {
  string id = 1;
  LabelApplicationRule data = 2;
}

message LabelApplicationRuleData {
  string name = 1;
  MatchingCriteria matching_criteria = 2;
  ApplicationCriteria application_criteria = 3;

  message MatchingCriteria {
    Type type = 1;
    repeated Condition conditions = 2;

    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_SPAN = 1;
      TYPE_TRACE = 2;
    }

    message Condition {
      string name = 1;
      Scope scope = 2;
      string key = 3;
      Operator operator = 4;
      optional string value = 5;

      enum Operator {
        OPERATOR_UNSPECIFIED = 0;
        OPERATOR_EXISTS = 1; // operator to check if the key exists, value is not checked in this case
        OPERATOR_EQUALS = 2; // operator to check if the key exists, and value is equal to the provided value
        OPERATOR_CONTAINS = 3; // operator to check if the key exists, and value contains the provided value
        OPERATOR_STARTS_WITH = 4; // operator to check if the key exists, and value starts with the provided value
        OPERATOR_ENDS_WITH = 5; // operator to check if the key exists, and value ends with the provided value
        OPERATOR_MATCHES_REGEX = 6; // operator to check if the key exists, and value matches the provided regex value
      }
    }
  }

  message ApplicationCriteria {
    Type type = 1;
    string scope = 2;
    Action action = 3;

    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_ENTITY = 1;
    }

    message Action {
      Operation operation = 1;
      oneof value {
        string static_label_id = 2;
        DynamicLabel dynamic_label = 3;
      }

      enum Operation {
        OPERATION_UNSPECIFIED = 0;
        OPERATION_MERGE = 1;
      }

      message DynamicLabel {
        repeated TokenExtractionRule token_extraction_rules = 1;
        string token_combining_expression  = 2; // sample expression "${deployment}_${version}"

        message TokenExtractionRule {
          string key = 1;
          Scope scope = 2;
          optional string alias = 3;
        }
      }
    }
  }

  enum Scope {
    SCOPE_UNSPECIFIED = 0;
    SCOPE_ATTRIBUTE = 1;
    SCOPE_REQUEST = 2;
    SCOPE_RESPONSE = 3;
  }
}
